Unclodes code block typo fix

--- a/docs/interaction-studio/mcp-serverside-code-basics.mdx
+++ b/docs/interaction-studio/mcp-serverside-code-basics.mdx
@@ -60,7 +60,7 @@ The final outcome of your work in this tab is the personalised payload (5). Depe
 
 If you don't see `experience` or `campaign` in the payload object (5), it means there is a bug in your template code (1).
 
-If you don't see the configuration form preview (3) updates despite making changes in the serverside code (1), MCP probably froze. Check whether you are still logged in to the MC Personalization (MCP session length is shorter than SFMC's). If yes, cut (`ctrl`/`cmd` + `x`) your whole serverside code, provide any symbol (like `a') to overwrite the cache and replace it back by pasting the code (`ctrl`/`cmd` + `v`).
+If you don't see the configuration form preview (3) updates despite making changes in the serverside code (1), MCP probably froze. Check whether you are still logged in to the MC Personalization (MCP session length is shorter than SFMC's). If yes, cut (`ctrl`/`cmd` + `x`) your whole serverside code, provide any symbol (like `a`) to overwrite the cache and replace it back by pasting the code (`ctrl`/`cmd` + `v`).
 
 :::
 
