Removal of outdated information about Code Resource migration

--- a/docs/config/sfmc-code-resource.mdx
+++ b/docs/config/sfmc-code-resource.mdx
@@ -15,7 +15,7 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 Code Resources in Salesforce Marketing Cloud are a solution for hosting JavaScript, CSS, JSON, RSS, Text and XML files within your account.
 
-They were part of the legacy Classic CloudPages. However, their features and usefulness allowed them to survive sunsetting and thrive in the Web Studio. With [Spring '22 Release](https://help.salesforce.com/s/articleView?id=sf.mc_rn_2022_spring_cloud_pages_classic_editor_migrated_to_content_builder.htm&type=5), they got a new home in Content Builder and live along with Content Blocks.
+They were part of the legacy Classic CloudPages. However, their features and usefulness allowed them to survive sunsetting and thrive in the Web Studio.
 
 Why use Code Resources when we have new CloudPages in Web Studio and Code Content Blocks in Content Builder? Unique set of features makes Code Resources irreplaceable:
 
