Added link to technical Send Log part to make it more clear

--- a/docs/config/sfmc-enhanced-send-log.mdx
+++ b/docs/config/sfmc-enhanced-send-log.mdx
@@ -153,7 +153,7 @@ Create standard Data Extension with more user-friendly names and extend it with 
 
 ### Enhanced Send Log SQL Query Activity
 
-Create Automation with Query Activity that will take data from your technical Send Log and [System Data Views](./sfmc-system-data-views.mdx) to populate your Enhanced Send Log DE with actionable data.
+Create Automation with Query Activity that will take data from your technical [template-based Send Log](#send-log-data-extension-template) and [System Data Views](./sfmc-system-data-views.mdx) to populate your Enhanced Send Log DE with actionable data.
 
 ```sql
 SELECT
